--- a/todos-backend/.env
+++ b/todos-backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI_PROD=mongodb+srv://minju:lb4613lb!!@cluster0.2zwio.mongodb.net/todo-student
+MONGODB_URI_PROD=mongodb+srv://minju:lb4613lblb@cluster0.2zwio.mongodb.net/todo-student
